[gd_scene load_steps=38 format=3 uid="uid://bkfnr4qat1ah0"]

[ext_resource type="Script" uid="uid://dbdi6y3t2arwa" path="res://Scripts/player_movement.gd" id="1_cvnsp"]
[ext_resource type="PackedScene" uid="uid://cw3hs2qsg2k4t" path="res://Scenes/air_puff_H.tscn" id="2_pu2lt"]
[ext_resource type="Script" uid="uid://op6sw0x6ufu0" path="res://Scripts/player_health.gd" id="3_6t5aa"]
[ext_resource type="Texture2D" uid="uid://dqq5r8k5fmji" path="res://Assets/sprites/PlayerGUI/parryCharges/parryChargeR.png" id="4_8erm5"]
[ext_resource type="Texture2D" uid="uid://p0l22jx1g27v" path="res://Assets/sprites/PlayerGUI/parryCharges/parryChargeB.png" id="4_vgqql"]
[ext_resource type="Texture2D" uid="uid://43vkm7xwgije" path="res://Assets/sprites/PlayerGUI/parryCharges/parryChargeG.png" id="5_x3wgy"]
[ext_resource type="Texture2D" uid="uid://bbkx61gvv1jye" path="res://Assets/sprites/PlayerGUI/parryCharges/parryChargeY.png" id="6_3smsa"]
[ext_resource type="Texture2D" uid="uid://b3v6fvv7a0rdx" path="res://Assets/sprites/PlayerSprites/highJump_dashPuffy.png" id="7_gymyn"]
[ext_resource type="Texture2D" uid="uid://d3yjier25qwfg" path="res://Assets/sprites/PlayerSprites/parry_jumpPuffy.png" id="7_tx1dd"]
[ext_resource type="Texture2D" uid="uid://b6f36ebip5og4" path="res://Assets/sprites/PlayerGUI/parryCharges/parryChargeEmpty.png" id="8_f1ek2"]
[ext_resource type="Texture2D" uid="uid://cc46slmlinkrh" path="res://Assets/sprites/PlayerSprites/glint_anim.png" id="9_f1ek2"]
[ext_resource type="FontFile" uid="uid://ckbaagqak4gj6" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="10_tx1dd"]
[ext_resource type="Script" uid="uid://ciukewv7haujl" path="res://Scripts/vine_component.gd" id="13_ukyrk"]
[ext_resource type="Texture2D" uid="uid://dfvr42g7lumlw" path="res://Assets/sprites/VFXSprites/parrySpark.png" id="14_7dp3o"]
[ext_resource type="Texture2D" uid="uid://nxsnbivw3ij4" path="res://Assets/sprites/PlayerSprites/ziplineFriction.png" id="15_h4iuc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("7_gymyn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("7_gymyn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_tx1dd"]
load_path = "res://.godot/imported/puffyWalk.png-3645a6445e52bd6f8ddd03ef61130809.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = SubResource("CompressedTexture2D_tx1dd")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = SubResource("CompressedTexture2D_tx1dd")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("7_tx1dd")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("7_tx1dd")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = SubResource("CompressedTexture2D_tx1dd")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = SubResource("CompressedTexture2D_tx1dd")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = SubResource("CompressedTexture2D_tx1dd")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = SubResource("CompressedTexture2D_tx1dd")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i6g32"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}],
"loop": true,
"name": &"Dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}],
"loop": true,
"name": &"HighJump",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_fd4e3")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}],
"loop": true,
"name": &"Parry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cvnsp"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("9_f1ek2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("9_f1ek2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("9_f1ek2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("9_f1ek2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bi64h"]
animations = [{
"frames": [{
"duration": 1.3,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_wpjfl")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("15_h4iuc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("15_h4iuc")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("15_h4iuc")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vfarp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("empty_charge_sprite_1", "empty_charge_sprite_2", "empty_charge_sprite_3")]
script = ExtResource("1_cvnsp")
air_puff_scene = ExtResource("2_pu2lt")
charge_texture_1 = ExtResource("4_vgqql")
charge_texture_2 = ExtResource("5_x3wgy")
charge_texture_3 = ExtResource("4_8erm5")
charge_texture_4 = ExtResource("6_3smsa")
empty_charge_texture = ExtResource("8_f1ek2")
empty_charge_sprite_1 = NodePath("ParryCharge1")
empty_charge_sprite_2 = NodePath("ParryCharge2")
empty_charge_sprite_3 = NodePath("ParryCharge3")
dash_cooldown = 0.35

[node name="MainSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_i6g32")
animation = &"Parry"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_cvnsp")

[node name="HealthScript" type="Node" parent="."]
script = ExtResource("3_6t5aa")
iframe_duration = 1.5

[node name="ParryCharge1" type="Sprite2D" parent="."]
position = Vector2(-13, -17)
texture = ExtResource("8_f1ek2")

[node name="ParryCharge2" type="Sprite2D" parent="."]
position = Vector2(0, -23)
texture = ExtResource("8_f1ek2")

[node name="ParryCharge3" type="Sprite2D" parent="."]
position = Vector2(13, -17)
texture = ExtResource("8_f1ek2")

[node name="GlintSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, -12)
sprite_frames = SubResource("SpriteFrames_bi64h")
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="AirPuff" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-3, -12)
sprite_frames = SubResource("SpriteFrames_bi64h")
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="Late_EarlyLabel" type="Label" parent="."]
visible = false
offset_left = 9.0
offset_top = -15.0
offset_right = 55.0
offset_bottom = 8.0
theme_override_colors/font_color = Color(0.88184, 0.380642, 0.371091, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_tx1dd")
theme_override_font_sizes/font_size = 7
text = "Late!"

[node name="VineComponent" type="Node" parent="."]
script = ExtResource("13_ukyrk")
swing_speed = 100.0
base_initial_boost = 60.0
vine_bend_compensation = 1.0
vine_release_dash_force_multiplier = 0.8

[node name="ParrySpark" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(1, -8)
rotation = -0.70714
scale = Vector2(1.3, 1.3)
texture = ExtResource("14_7dp3o")

[node name="ZiplineFriction" type="AnimatedSprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(-3, -5)
sprite_frames = SubResource("SpriteFrames_vfarp")
autoplay = "default"
frame_progress = 0.692867
